...
                android:src="@drawable/ic_add"
                android:layout_margin="@dimen/margin_normal"
                android:layout_width="wrap_content"
                app:layout_anchor="@id/reminderssRecyclerView"
                app:fabSize="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/addReminderFAB" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>

